--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <li>Shelter and Rehabilitation</li>
     </ul>
 </section>
+    //help ??
 
 <footer>
     <p>&copy; 2024 Women's Helpline | All Rights Reserved</p>
