--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             text-align: center;
             padding: 10px 0;
             margin-top: 20px;
+            text-align: center;
         }
     </style>
 </head>
