--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             align-items: center;
             color: white;
             text-align: center;
+            text-decoration : flex;
         }
         .hero h1 {
             font-size: 3rem;
