--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             color: white;
             padding: 20px;
             text-align: center;
+            rotate off
         }
         nav {
             margin: 0;
