--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             padding: 20px;
             text-align: center;
             rotate off
+            text marrgin error
         }
         nav {
             margin: 0;
