--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
     <script>
         function validateLogin() {
             // Here you can add real validation logic to check credentials
-            // For now, just simulating successful login
+            // For now, just simulating successful login//login sedc
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
