--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f9;
+            
         }
         header {
             background-color: #e91e63;
@@ -33,7 +34,7 @@
             font-weight: bold;
         }
         .hero {
-            background-image: url('hero-image.jpg'); /* Replace with your image URL */
+            background-image: url('hero-image.jpg'); /* Replace with the it  your image URL */
             background-size: cover;
             background-position: center;
             height: 400px;
