--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         </div>
     </header>
 
-    <!-- Login Form Section -->
+    <!-- Login Form Section --> no
     <section id="login">
         <div class="container">
             <h2>Login to Your Account</h2>
